--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ pages:
   stage: doc
   script:
     - cd build
-    - xvfb-run make doc
+    - xvfb-run -s "-screen 0 1600x1200x32" make doc
     - mv ../install/share/doc/yade-ci/html ../public
   dependencies:
     - cmake
