--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,8 @@ pages:
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
     - mv ../install/share/doc/yade-ci/html ../public
+    - mv ../install/share/doc/yade-ci/Yade.pdf ../public
+    - mv ../install/share/doc/yade-ci/Yade.epub ../public
   dependencies:
     - cmake
     - make
