change links for yade tech archive to /publi, add yade tech archive references to reference page

--- a/doc/sphinx/publications.rst.in
+++ b/doc/sphinx/publications.rst.in
@@ -7,7 +7,7 @@ The first section gives the references that we kindly ask you to use for citing 
 With the increasing rate of publications using Yade it became difficult to list them all, therefore coverage of recent years is only partial.
 You can help us: if you publish or you know publications related to Yade do not hesitate to add it to this list. If you don't have direct access to the source code, please send the reference (as a bibtex item) to `Yade developpers <yade-dev@lists.launchpad.net>`_. If PDF is freely available, add url for direct fulltext downlad. If not, consider uploading fulltext in PDF, either to `Yade wiki <https://www.yade-dem.org/wiki/>`_ or to other website, if legally permitted.
 
-.. note:: This file is generated from :ysrc:`doc/yade-articles.bib`, :ysrc:`doc/yade-conferences.bib`, :ysrc:`doc/yade-theses.bib` and :ysrc:`doc/yade-docref.bib`.
+.. note:: This file is generated from :ysrc:`doc/yade-articles.bib`, :ysrc:`doc/yade-conferences.bib`, :ysrc:`doc/yade-theses.bib`, :ysrc:`doc/yade-tech-archive.bib`, and :ysrc:`doc/yade-docref.bib`.
 
 Citing Yade
 ---------------------
@@ -27,5 +27,8 @@ Master and PhD theses
 -----------------------
 @bib2rst.bib2rst('../yade-theses.bib')@
 
+:ref:`yadeTechArchive`
+-----------------------------------------------
+@bib2rst.bib2rst('../yade-tech-archive.bib')@
 
 
