--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 
 cmake:
   stage: cmake
+  only: master
   script:
     - mkdir build && cd build
     - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DDISABLE_SAVE_TEMPS=1 ..
@@ -16,6 +17,7 @@ cmake:
       
 make:
   stage: build
+  only: master
   script:
     - cd build
     - make -j 12
@@ -29,6 +31,7 @@ make:
 
 test:
   stage: test
+  only: master
   script:
     - install/bin/yade-ci --test
   dependencies:
@@ -36,6 +39,7 @@ test:
 
 check:
   stage: test
+  only: master
   script:
     - install/bin/yade-ci --checks
   dependencies:
@@ -43,6 +47,7 @@ check:
 
 pages:
   stage: doc
+  only: master
   script:
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
