--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ stages:
 
 cmake:
   stage: cmake
-  only: master
+  only:
+    - master
   script:
     - mkdir build && cd build
     - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=../install -DDISABLE_SAVE_TEMPS=1 ..
@@ -17,7 +18,8 @@ cmake:
       
 make:
   stage: build
-  only: master
+  only:
+    - master
   script:
     - cd build
     - make -j 12
@@ -31,7 +33,8 @@ make:
 
 test:
   stage: test
-  only: master
+  only:
+    - master
   script:
     - install/bin/yade-ci --test
   dependencies:
@@ -39,7 +42,8 @@ test:
 
 check:
   stage: test
-  only: master
+  only:
+    - master
   script:
     - install/bin/yade-ci --checks
   dependencies:
@@ -47,7 +51,8 @@ check:
 
 pages:
   stage: doc
-  only: master
+  only:
+    - master
   script:
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
