Fix the banner, so that key name F12, etc are shown in bold using standard terminal ansi codes, and word help is underlined.
Change \e to \033

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -166,7 +166,8 @@ def userSession(gui='none',qapp=None):
 		return
 	
 	# common ipython configuration
-	banner='[[ ^L clears screen, ^U kills line. '+', '.join((['F12 controller','F11 3d view (use h-key for showing help)','F10 both','F9 generator'] if (gui<>'none') else [])+['F8 plot'])+'. ]]'
+	# use standard terminal color codes to make F12, F11 bold, and underline the word "help", see https://stackoverflow.com/questions/4842424/list-of-ansi-color-escape-sequences
+	banner='[[ ^L clears screen, ^U kills line. '+', '.join((['\033[1mF12\033[0m controller','\033[1mF11\033[0m 3D view (press \033[4m"h"\033[0m in 3D view for \033[4mhelp\033[0m)','\033[1mF10\033[0m both','\033[1mF9\033[0m generator'] if (gui<>'none') else [])+['\033[1mF8\033[0m plot'])+'. ]]'
 	ipconfig=dict( # ipython options, see e.g. http://www.cv.nrao.edu/~rreid/casa/tips/ipy_user_conf.py
 		prompt_in1='Yade [\#]: ',
 		prompt_in2='     .\D.: ',
