--- a/core/main/yade-batch.in
+++ b/core/main/yade-batch.in
@@ -61,7 +61,10 @@ finished: %s
 			else:
 				statusString = 'FAILED!'
 			n = pynotify.Notification("Yade", "The job %d/%d is %s Duration %s"%(self.num+1, len(jobs), statusString, self.duration), imageLogo)
-			n.show()
+			try:
+				n.show()
+			except:
+				pass
 		
 	def ensureXmlrpc(self):
 		'Attempt to establish xmlrpc connection to the job (if it does not exist yet). If the connection could not be established, as magic line was not found in the log, return False.'
@@ -396,7 +399,10 @@ if not opts.disablePynotify:
 		import pynotify
 		pynotifyAvailable = True
 		pynotify.init("Yade")
-	except ImportError:
+		# check server capabilities, I need to do this because otherwise it would not detect that server is not present.
+		# https://notify2.readthedocs.io/en/latest/
+		pynotify.get_server_caps()
+	except Exception:
 		pynotifyAvailable = False
 
 print "Will run simulation(s) %s using `%s', nice value %d, using max %d cores."%(scripts,executable,nice,maxJobs)
