--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -11,7 +11,7 @@ except ImportError:
 # Add search path for yade Python-modules
 # It allows to use both Yade-versions (packaged and self-compiled one).
 # See LP:1254708 for more details
-# https://bugs.launchpad.net/yade/+bug/1254708
+# (old site, fixed bug) https://bugs.launchpad.net/yade/+bug/1254708
 
 sys.path.insert(1,'${runtimePREFIX}/${LIBRARY_OUTPUT_PATH}/yade${SUFFIX}/py')
 
@@ -58,7 +58,7 @@ par.add_argument('--checks',help='Run a series of user-defined check tests as de
 par.add_argument('--performance',help='Starts a test to measure the productivity',dest='performance',action='store_true')
 par.add_argument('script',nargs='?',default='',type=str,help=argparse.SUPPRESS)
 par.add_argument('args',nargs=argparse.REMAINDER,help=argparse.SUPPRESS) # see argparse doc, par.disable_interspersed_args() from optargs module
-par.add_argument('-L','--libs',help='import libraries at startup before importing yade libs. May be used when the ordering of imports matter (see e.g. https://bugs.launchpad.net/yade/+bug/1183402/comments/3). The option can be used multiple times, as in "yade -Llib1 -Llib2"',default=None,action='append',dest='impLibraries',type=str)
+par.add_argument('-L','--libs',help='import libraries at startup before importing yade libs. May be used when the ordering of imports matter (see fixed bug (on old site) https://bugs.launchpad.net/yade/+bug/1183402 and discussion in https://gitlab.com/yade-dev/trunk/issues/18). The option can be used multiple times, as in "yade -Llib1 -Llib2"',default=None,action='append',dest='impLibraries',type=str)
 opts=par.parse_args()
 args = opts.args
 
@@ -97,7 +97,7 @@ if opts.test:
 	except:
 		print 20*'*'+' UNEXPECTED EXCEPTION WHILE RUNNING TESTS '+20*'*'
 		print 20*'*'+' '+str(sys.exc_info()[0])
-		print 20*'*'+" Please report bug at http://bugs.launchpad.net/yade providing the following traceback:"
+		print 20*'*'+" Please report bug at https://gitlab.com/yade-dev/trunk/issues providing the following traceback:"
 		import traceback; traceback.print_exc()
 		print 20*'*'+' Thank you '+20*'*'
 		sys.exit(2)
