--- a/py/__init__.py.in
+++ b/py/__init__.py.in
@@ -28,7 +28,7 @@ else: sys.setdlopenflags(dl.RTLD_NOW)
 
 # important: initialize c++ by importing libstdc++ directly
 # see http://www.abclinuxu.cz/poradna/programovani/show/286322
-# https://bugs.launchpad.net/bugs/490744
+# (old site, fixed bug) https://bugs.launchpad.net/bugs/490744
 # 
 # This is already fixed in systems, newer, than Ubuntu 10.04. anyway for 
 # back-compatibility we will keep it.
