--- a/py/config.py.in
+++ b/py/config.py.in
@@ -28,9 +28,9 @@ metadata=dict(
 	long_desc='Extensible open-source framework for discrete numerical models, focused on Discrete Element Method. The computation parts are written in c++ using flexible object model, allowing independent implementation of new alogrithms and interfaces. Python is used for rapid and concise scene construction, simulation control, postprocessing and debugging.\n\n\n\nSee http://www.yade-dem.org/ for documentation and http://www.launchpad.net/yade for the project itself.\n\nThis is version %s with features %s.'%(version,','.join(features)),
 	author='Yade Developers Team',
 	website='http://www.yade-dem.org',
-	author_contact='http://www.launchpad.net/~yade-dev',
+	author_contact='http://www.launchpad.net/~yade-dev and https://gitlab.com/yade-dev/trunk/project_members',
 	mailinglist='yade-users@lists.launchpad.net',
-	bugtracker='http://bugs.launchpad.net/yade',
+	bugtracker='https://gitlab.com/yade-dev/trunk/issues',
 	copyright='© 2003--%s'%(datetime.date.today().year),
 	license='''This program is free software; you can redistribute it and/or modify 
 it under the terms of the GNU General Public License as published 
