--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -377,7 +377,7 @@ IF(ENABLE_FOAMCOUPLING)
   IF (MPI_FOUND)
     INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_FOAM")
-    SET (LINKLIBS "${LINKLIBS};${MPI_C_LIBRARIES};${MPI_CXX_LIBRARIES};")
+    SET (LINKLIBS "${LINKLIBS};${MPI_CXX_LIBRARIES};")
     MESSAGE(STATUS "MPI found")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} FOAMCOUPLING")
   ELSE(MPI_FOUND)
